<resources>
    <string name="app_name">Symposium</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login_alternative_text">Collaborate and create your own ideas together!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_camel_case_with_space">Sign Up</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="password">Password</string>
    <string name="your_name">Your name</string>
    <string name="email">Email</string>
    <string name="sing_in_camel_case_with_space">Sing In</string>
    <string name="please_wait">Please wait</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_out">Log out</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="web_client_id">220109079049-davvmbb3qdjgator4tkc6dmqicp6r6tl.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1371131593315017</string>
    <string name="facebook_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">9dbdf4bf33311c63b62ee742729b188f</string>
    <string name="password_restore">Password Restore</string>
    <string name="password_restore_hint">After you enter your email, \n you will get a password restoration request.</string>
    <string name="send_request">Send Request</string>
    <string name="phone">Phone</string>
    <string name="change_your_email">Change your Email</string>
    <string name="change_your_phone">Change your Phone</string>
    <string name="change_your_name">Change your Name</string>
    <string name="add_board">Add Board</string>
    <string name="board_name">Board Name</string>
    <string name="create">Create</string>


</resources>