<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:id="@+id/constraintLayoutSignIn"
    android:background="@color/backgroundMainColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSignIn"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarBackgroundColor"
        android:theme="@style/CustomToolBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sing_in_camel_case_with_space"
            android:textColor="@color/toolbarTextAndIconColor"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/nexa" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexa"
        android:text="@string/app_name"
        android:textColor="@color/textAccentColor"
        android:textSize="@dimen/loginLabelSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarSignIn"
        app:layout_constraintVertical_bias="0.075" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/loginCardViewMarginHorizontal"
        android:layout_marginTop="@dimen/loginCardViewMarginVertical"
        android:backgroundTint="@color/cardViewBackground"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/loginMargin">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/textMainColor"
                android:textColorHint="@color/textAlternativeColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"  />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginMargin"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/textMainColor"
                android:textColorHint="@color/textAlternativeColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/linkTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:background="@drawable/button_filled_rounded_shape"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="2dp"
        android:text="@string/sign_in"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/loginButtonTextSize"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        android:layout_marginTop="@dimen/loginMargin"
        tools:layout_editor_absoluteX="36dp" />

</androidx.constraintlayout.widget.ConstraintLayout>